added section social-proof

--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -107,6 +107,7 @@
   --section-margin-y: #{fluid(80, 40)};
   --section-margin-y-static: #{rem(80)};
   --section-margin-y-to-medium: #{fluid(80, 60)};
+  --section-margin-y-extra-big: #{fluid(130, 80)};
   --section-margin-y-big: #{fluid(120, 80)};
   --section-margin-y-big-to-medium: #{fluid(120, 60)};
   --section-margin-y-big-to-small: #{fluid(120, 40)};
