--- a/styles/pages/tire-fitting-page/tire-fitting.scss
+++ b/styles/pages/tire-fitting-page/tire-fitting.scss
@@ -13,8 +13,9 @@
 @use "../../blocks/header/_header.scss";
 @use "../../blocks/page-heading/_page-heading.scss";
 @use "../../blocks/promo/_promo-tire-fitting-page.scss";
-// @use "../../blocks/locations/_locations-short.scss";
+@use "../../blocks/locations/_locations-short.scss";
 @use "../../blocks/cost-service/_cost-service-tire-fitting-page.scss";
+@use "../../blocks/social-proof/_social-proof.scss";
 
 @use "../../blocks/advantages/_our-advantages.scss";
 @use "../../blocks/appointment-choose/_appointment-choose.scss";
