--- a/styles/blocks/appointment-choose/appointment-choose.scss
+++ b/styles/blocks/appointment-choose/appointment-choose.scss
@@ -8,7 +8,7 @@
     width: 100%;
     min-height: rem(138);
     padding-block: rem(10);
-    padding-inline: rem(167) rem(226);
+    padding-inline: rem(167);
     border-radius: var(--border-radius-small);
   }
 
@@ -37,6 +37,10 @@
     display: flex;
     align-items: center;
     gap: rem(20);
+  }
+
+  &__button {
+    min-width: rem(140);
   }
 }
 
@@ -84,7 +88,7 @@
     }
 
     &__buttons {
-      max-width: rem(187);
+      max-width: rem(300);
       width: 100%;
       flex-direction: column;
       align-items: stretch;
