added section service-situation

--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -109,6 +109,7 @@
   --section-margin-y-to-medium: #{fluid(80, 60)};
   --section-margin-y-extra-big: #{fluid(130, 80)};
   --section-margin-y-big: #{fluid(120, 80)};
+  --section-margin-y-extra-big-to-medium: #{fluid(130, 60)};
   --section-margin-y-big-to-medium: #{fluid(120, 60)};
   --section-margin-y-big-to-small: #{fluid(120, 40)};
 
