--- a/styles/blocks/сommon-blocks/_section.scss
+++ b/styles/blocks/сommon-blocks/_section.scss
@@ -15,6 +15,9 @@
   &--margin-to-medium {
     margin-bottom: var(--section-margin-y-to-medium);
   }
+  &--extra-big-to-medium-margin {
+    margin-bottom: var(--section-margin-y-extra-big-to-medium);
+  }
   &--big-to-medium-margin {
     margin-bottom: var(--section-margin-y-big-to-medium);
   }
