--- a/styles/pages/tire-fitting-page/tire-fitting.scss
+++ b/styles/pages/tire-fitting-page/tire-fitting.scss
@@ -19,6 +19,7 @@
 
 @use "../../blocks/advantages/_our-advantages.scss";
 @use "../../blocks/appointment-choose/_appointment-choose.scss";
+@use "../../blocks/service-situation/_service-situation.scss";
 @use "../../blocks/when-work/_when-work.scss";
 @use "../../blocks/other-services/_other-services.scss";
 
