added tire-fitting page

--- a/styles/pages/tire-fitting-page/tire-fitting.scss
+++ b/styles/pages/tire-fitting-page/tire-fitting.scss
@@ -21,6 +21,7 @@
 @use "../../blocks/appointment-choose/_appointment-choose.scss";
 @use "../../blocks/service-situation/_service-situation.scss";
 @use "../../blocks/when-work/_when-work.scss";
+@use "../../blocks/services-list/_services-list.scss";
 @use "../../blocks/other-services/_other-services.scss";
 
 @use "../../blocks/footer/_footer.scss";
